<resources>
    <string name="app_name">PaddyFarm</string>
    <string name="title">PaddyFarm</string>
    <string name="sub_title">Smart support for paddy farmers</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Login to your account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_capital">OR</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="register">Register</string>
    <string name="greeting_placeholder">Good Morning,</string>
    <string name="user_name_placeholder">Dilan!</string>
    <string name="current_crop_stage">Current Crop Stage</string>
    <string name="stage_placeholder">Vegetation Stage</string>
    <string name="day_counter_placeholder">Day 24</string>
    <string name="start_cultivation">Start Cultivation</string>
    <string name="recommendations">Recommendations</string>
    <string name="ai_chatbot">AI Chatbot</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="fertilizer_prices">Fertilizer Prices</string>
    <string name="profile">Profile</string>
    <string name="start_cultivation_subtitle">Add new cultivation details</string>
    <string name="recommendations_subtitle">Get irrigation and fertilizer advice</string>
    <string name="ai_chatbot_subtitle">Ask farming questions</string>
    <string name="disease_detection_subtitle">Upload leaf image and detect disease</string>
    <string name="fertilizer_prices_subtitle">Check latest fertilizer prices</string>
    <string name="profile_subtitle">View and manage your profile</string>
    <string name="tip_title">Smart farming for a better tomorrow</string>
    <string name="save_session">Save Session</string>
    <string name="tip_subtitle">PaddyFarm is here to support you at every step.</string>
    <string name="farming_tips">Farming tips</string>
    <string name="login_redirect_text">Already have and account? Log in</string>
    <string name="login_redirect_spannable_text_here">[Login redirect SpannableText here]</string>
    <string name="placeholder">[Placeholder]</string>
    <string name="start_cultivation_top_line_1">"Let's start a new\ncultivation session"</string>
    <string name="start_cultivation_top_line_2">Enter your cultivation details to\nget personalized recommendations\nand guidance.</string>
    <string name="tip_2_title">"Why it's important?"</string>
    <string name="tip_2_subtitle">Providing accurate cultivation details helps us give you the best recommendations at the right time.</string>
    <string name="cultivation_start_date">Cultivation start date</string>
    <string name="seed_type">Seed type</string>
    <string name="size_in_acres">Size in acres</string>
    <string name="paddy_variety">Paddy variety (Optional)</string>
    <string name="logout">Logout</string>
    <string name="name_placeholder">John Doe</string>
    <string name="phone_number_placeholder">070 123 4567</string>
    <string name="email_placeholder">johndoe@mail.com</string>
    <string name="language_placeholder">English</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cultivation_history">Cultivation History</string>
    <string name="my_fields">My Fields</string>
    <string name="settings">Settings</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="fertilizer_prices_line_1">Prices may vary by location and dealer.</string>
    <string name="fertilizer_price_last_update_datetime_placeholder">Last Updated: 20 May 2024</string>
    <string name="search_fertilizers">Search fertilizers…</string>
    <string name="fertilizer_name_placeholder">Fertilizer name</string>
    <string name="fertilizer_price_placeholder">Rs. 00000.00</string>
    <string name="kg"> /1kg</string>
    <string name="type_message">Type message…</string>
    <string name="message_placeholder">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="delivered_time">2026/06/20 09:20 AM</string>
    <string name="irrigation_recommendation">Irrigation Recommendations</string>
    <string name="irrigation_recommendation_description">Maintain medium water level in the field. Ensure proper drainage to avoid water stagnation.</string>
    <string name="fertilizer_recommendation">Fertilizer Recommendation</string>
    <string name="fertilizer_recommendation_description">Apply Urea fertilizer (46–0–0) @ 50 kg per acre. Apply in the morning and mix well with water.</string>
    <string name="disease_and_pest_check_recommendation">Disease &amp; Pest Check Recommendation</string>
    <string name="disease_and_pest_check_description">Check for poor germination, bird damage, and seedling pests.</string>
    <string name="maintenance_tips">Maintenance Tips</string>
    <string name="maintenance_tips_description">Monitor leaf color and plant growth regularly. Remove weeds and check for pest and disease symptoms.</string>
    <string name="next_stage_prediction">Next Stage Prediction</string>
    <string name="next_stage_prediction_description">Your crop will likely enter Panicle Initiation Stage in about 10 – 12 days.</string>
    <string name="note">Note</string>
    <string name="note_description">Recommendations are generated based on your cultivation details and current whether conditions.</string>
    <string name="upload_leaf_image">Upload Leaf Image</string>
    <string name="upload_leaf_image_description">Make sure image is clear and in good lighting</string>
    <string name="tap_to_upload_image">Tap to upload image</string>
    <string name="jpg_png_up_to_10mb">JPG, PNG up to 10MB</string>
    <string name="tips_for_better_results">Tips for better results</string>
    <string name="capture_a_clear_image">Capture a clear image of the affected leaf</string>
    <string name="ensure_good_lighting">Ensure good lighting and focus</string>
    <string name="avoid_blurry">Avoid blurry or distant shots</string>
    <string name="include_only_the_affected_leaf">Include only the affected leaf</string>
    <string name="recent_detections">Recent Detections</string>
    <string name="view_all">View all</string>
    <string name="brown_spot">Brown Spot</string>
    <string name="bipolaris_oryzae">Bipolaris oryzae</string>
    <string name="low_risk">Low Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="high_risk">High Risk</string>
    <string name="invalid_risk_level">Invalid</string>
    <string name="detected_on">Detected on</string>
    <string name="early_detection">Early detection, better protection</string>
    <string name="early_detection_description">Detecting diseases early helps in taking timely actions and prevents crop yield loss.</string>
    <string name="scan_now">Scan Now</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="confirmation">Confirmation</string>
    <string name="alert_placeholder">Alert placeholder</string>
    <string name="seed_type_placeholder">Seed Type</string>
    <string name="seed_type_description_placeholder">Seed Type Description</string>
    <string name="certified_seed_title">Certified Seed</string>
    <string name="certified_seed_description">Certified by the Department of Agriculture</string>
    <string name="registered_seed_title">Registered Seed</string>
    <string name="registered_seed_description">Produced under registered standards</string>
    <string name="farmer_saved_seed_title">Farmer Saved Seed</string>
    <string name="farmer_saved_seed_description">Seeds saved from the previous harvest</string>
    <string name="traditional_seed_title">Traditional Seed</string>
    <string name="traditional_seed_description">Traditional local seed variety</string>
    <string name="hybrid_seed_title">Hybrid Seed</string>
    <string name="hybrid_seed_description">Commercial hybrid seeds (if applicable)</string>
    <string name="paddy_variety_placeholder">Paddy Variety Option #1</string>
    <string name="bg_250">Bg 250</string>
    <string name="bg_300">Bg 300</string>
    <string name="bg_304">Bg 304</string>
    <string name="bg_352">Bg 352</string>
    <string name="bg_357">Bg 357</string>
    <string name="bg_358">Bg 358</string>
    <string name="bg_360">Bg 360</string>
    <string name="bg_366">Bg 366</string>
    <string name="bg_379_2">Bg 379–2</string>
    <string name="at_362">At 362</string>
    <string name="at_354">At 354</string>
    <string name="bg_359">Bg 359</string>
    <string name="bg_369">Bg 369</string>
    <string name="bg_374">Bg 374</string>
    <string name="suwandel">Suwandel</string>
    <string name="pachchaperumal">Pachchaperumal</string>
    <string name="kalu_heenati">Kalu Heenati</string>
    <string name="madathawalu">Madathawalu</string>
    <string name="kuruluthuda">Kuruluthuda</string>
    <string name="maa_wee">Maa Wee</string>
    <string name="rathu_heenati">Rathu Heenati</string>
    <string name="failed_to_fetch_recommendations">Failed to fetch recommendations for the current cultivation session.</string>
    <string name="notification_title">Title</string>
    <string name="notification_content">Lorem ipsum lorem ipsum</string>
    <string name="notification_datetime">2026/07/06 08:00 AM</string>
    <string name="notifications">Notifications</string>
    <string name="disease_detection_result">Disease Detection Result</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_scientific_name">Disease Scientific Name</string>
    <string name="disease_risk_level">Disease Risk Level</string>
    <string name="close">CLOSE</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="detection_history">Detection History</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="required_information_missing">Information required are missing!</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="id_placeholder">#01</string>
    <string name="start_date">Start date</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="paddy_variety_without_optional">Paddy variety</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="good_night">Good Night,</string>
    <string name="day">Day </string>
    <string name="thinking">Thinking…</string>
    <string name="start_new_cultivation_session">Start a new cultivation session.</string>
</resources>