<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rect_round_corner_transparent"
            android:elevation="0dp"
            android:padding="0dp"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/imgHistoryElementPreview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/screenshot_2026_06_21_114310" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDiseaseHistoryElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brown_spot"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDiseaseScientificNameHistoryElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bipolaris_oryzae"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/riskLevelBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/badge_2">

                <TextView
                    android:id="@+id/txtRiskLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_risk"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/detected_on" />

                <TextView
                    android:id="@+id/txtDateHistoryElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>